# dealii_elasticity

./: .gitignore  CMakeLists.txt  README.md
include/: ale.h  burger.h  common.h  utility.h
src/: CMakeLists.txt  ale.cc  ale_settings.cc  burger.cc  burger_settings.cc  main.cc
